--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,13 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-  "permissions": ["scripting", "activeTab", "webRequest"],
+  "permissions": [
+    "scripting",
+    "activeTab",
+    "webRequest",
+    "declarativeNetRequest",
+    "declarativeNetRequestWithHostAccess"
+  ],
   "host_permissions": [
     "https://www.coupang.com/*",
     "https://whale-ecommerce-website.vercel.app/*",
@@ -37,7 +43,8 @@
       "matches": [
         "*://whale-ecommerce-website.vercel.app/*",
         "https://namingfactory.ai.kr/*",
-        "http://localhost:3000/*"
+        "http://localhost:3000/*",
+        "https://smartstore.naver.com/*"
       ]
     }
   ],
